--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,94 +1,113 @@
-name: CI/CD - Terraform + Build + Deploy
+name: 🚀 Deploy E-Commerce App to AWS EKS
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 env:
-  AWS_REGION: ap-south-1
-  PROJECT_NAME: ecommerce
-  ENVIRONMENT: dev
-
-permissions:
-  contents: read
-  id-token: write
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+  CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
+  K8S_NAMESPACE: ${{ secrets.K8S_NAMESPACE }}
+  TF_BACKEND_BUCKET: ${{ secrets.TF_BACKEND_BUCKET }}
+  TF_BACKEND_DYNAMODB: ${{ secrets.TF_BACKEND_DYNAMODB }}
+  TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
 
 jobs:
   deploy:
-    name: Deploy infra, build images, and deploy charts
+    name: Deploy Infrastructure and Microservices
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: 🧾 Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: ☁️ Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          terraform_version: 1.7.0
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      # -----------------------------
+      # Terraform Infrastructure Setup
+      # -----------------------------
+      - name: 🏗️ Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
-          aws-region: ${{{{ env.AWS_REGION }}}}
-          role-to-assume: ${{{{ secrets.AWS_ROLE_TO_ASSUME }}}}
-          role-session-name: github-actions
+          terraform_version: 1.9.8
 
-      - name: Terraform Init
-        working-directory: terraform/environments/${{{{ env.ENVIRONMENT }}}}
-        run: terraform init -backend-config=backend.tfvars
-
-      - name: Terraform Plan
-        working-directory: terraform/environments/${{{{ env.ENVIRONMENT }}}}
-        run: terraform plan -var-file=terraform.tfvars -out=tfplan
-
-      - name: Terraform Apply
-        working-directory: terraform/environments/${{{{ env.ENVIRONMENT }}}}
-        run: terraform apply -auto-approve tfplan
-
-      - name: Configure AWS ECR login
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Get ECR registry
-        id: ecr
+      - name: 🧱 Terraform Init
+        working-directory: ./terraform/environments/dev
         run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          echo "registry=${{ACCOUNT_ID}}.dkr.ecr.${{{{ env.AWS_REGION }}}}.amazonaws.com" >> $GITHUB_OUTPUT
+          terraform init \
+            -backend-config="bucket=${{ secrets.TF_BACKEND_BUCKET }}" \
+            -backend-config="dynamodb_table=${{ secrets.TF_BACKEND_DYNAMODB }}" \
+            -backend-config="region=${{ secrets.AWS_REGION }}"
 
-      - name: Build and push images
+      - name: 📜 Terraform Plan
+        working-directory: ./terraform/environments/dev
+        run: terraform plan -var-file="terraform.tfvars"
+
+      - name: 🚀 Terraform Apply
+        working-directory: ./terraform/environments/dev
+        run: terraform apply -auto-approve -var-file="terraform.tfvars"
+
+      # -----------------------------
+      # Build & Push Docker Images
+      # -----------------------------
+      - name: 🐳 Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: 🔨 Build & Push Docker images for all microservices
         run: |
-          echo "Building and pushing images to ECR..."
-          REG=${{{{ steps.ecr.outputs.registry }}}}
-          SERVICES=auth-service product-service cart-service order-service payment-service inventory-service review-service shipping-service notification-service analytics-service api-gateway
-          for svc in $SERVICES; do
-            echo "Building $svc..."
-            # Assumes Dockerfile present per-service at services/<svc>/Dockerfile
-            if [ -f services/$svc/Dockerfile ]; then
-              docker build -t $REG/$svc:latest -f services/$svc/Dockerfile services/$svc
-              docker push $REG/$svc:latest
-            else
-              echo "Skipping $svc - Dockerfile not found at services/$svc/Dockerfile"
-            fi
+          SERVICES=(
+            auth-service
+            product-service
+            cart-service
+            order-service
+            payment-service
+            inventory-service
+            review-service
+            shipping-service
+            notification-service
+            analytics-service
+            api-gateway
+          )
+
+          for SERVICE in "${SERVICES[@]}"; do
+            echo "Building and pushing $SERVICE..."
+            IMAGE_URI="${ECR_REPOSITORY}/${SERVICE}:${GITHUB_SHA}"
+            docker build -t $IMAGE_URI ./services/$SERVICE
+            docker push $IMAGE_URI
           done
 
-      - name: Configure kubeconfig
+      # -----------------------------
+      # Helmfile Deployment to EKS
+      # -----------------------------
+      - name: ☸️ Setup kubectl & helm
         run: |
-          CLUSTER_NAME="${{{{ env.PROJECT_NAME }}}}-${{{{ env.ENVIRONMENT }}}}"
-          aws eks update-kubeconfig --region ${{{{ env.AWS_REGION }}}} --name $CLUSTER_NAME
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x kubectl && sudo mv kubectl /usr/local/bin/
+          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+          curl -L https://github.com/roboll/helmfile/releases/download/v0.158.1/helmfile_0.158.1_linux_amd64.tar.gz | tar xz
+          sudo mv helmfile /usr/local/bin/
 
-      - name: Setup Helm
-        uses: azure/setup-helm@v3
-
-      - name: Deploy Helm charts
+      - name: 🔑 Configure kubeconfig for EKS
         run: |
-          helm upgrade --install auth-service charts/auth-service --set image.repository=$REG/auth-service --set image.tag=latest --namespace default --create-namespace
-          helm upgrade --install product-service charts/product-service --set image.repository=$REG/product-service --set image.tag=latest --namespace default --create-namespace
-          helm upgrade --install cart-service charts/cart-service --set image.repository=$REG/cart-service --set image.tag=latest --namespace default --create-namespace
-          helm upgrade --install order-service charts/order-service --set image.repository=$REG/order-service --set image.tag=latest --namespace default --create-namespace
-          helm upgrade --install payment-service charts/payment-service --set image.repository=$REG/payment-service --set image.tag=latest --namespace default --create-namespace
-          helm upgrade --install inventory-service charts/inventory-service --set image.repository=$REG/inventory-service --set image.tag=latest --namespace default --create-namespace
-          helm upgrade --install review-service charts/review-service --set image.repository=$REG/review-service --set image.tag=latest --namespace default --create-namespace
-          helm upgrade --install shipping-service charts/shipping-service --set image.repository=$REG/shipping-service --set image.tag=latest --namespace default --create-namespace
-          helm upgrade --install notification-service charts/notification-service --set image.repository=$REG/notification-service --set image.tag=latest --namespace default --create-namespace
-          helm upgrade --install analytics-service charts/analytics-service --set image.repository=$REG/analytics-service --set image.tag=latest --namespace default --create-namespace
-          helm upgrade --install api-gateway charts/api-gateway --set image.repository=$REG/api-gateway --set image.tag=latest --namespace default --create-namespace
+          aws eks update-kubeconfig \
+            --region $AWS_REGION \
+            --name $CLUSTER_NAME
+
+      - name: 🧭 Deploy all services via Helmfile
+        run: |
+          helmfile -e dev apply
+
+      - name: ✅ Verify deployment
+        run: |
+          kubectl get pods -n $K8S_NAMESPACE
+          kubectl get svc -n $K8S_NAMESPACE
